# marchingCubes

./: LICENSE  README.md  app.py  loadMesh.py  pyproject.toml  requirements.txt
templates/: viewer.html
